--- a/public/app.css
+++ b/public/app.css
@@ -1,11 +1,17 @@
 html, body {
   width: 100%;
   height: 100%;
+  color: #111111;
 }
 
 body {
   margin: 0px;
-  overflow: hidden;
+  /* overflow: hidden; */
+}
+
+p {
+  margin: 0px;
+  text-align: center;
 }
 
 img.place {
@@ -16,6 +22,11 @@ img.place {
 
 img.leaflet-image-layer {
   image-rendering: pixelated;
+}
+
+.leaflet-container {
+  width: 100% !important;
+  height: 100% !important;
 }
 
 .curtain {
@@ -61,21 +72,62 @@ img.leaflet-image-layer {
 }
 
 .qrcode {
-  border: 2px solid rgba(0,0,0,0.2);
   width: 150px;
   height: 150px;
+  float: right;
+}
+
+#addressContainer {
+  width: 100%;
+  text-align: center;
+}
+
+#address {
+  text-align: center;
+  margin-bottom: 15px;
+  width: 100%;
+  max-width: 400px;
+  border: 0px;
 }
 
 .cube {
-  border: 2px solid rgba(0,0,0,0.2);
+  border: 2px solid #bdbdbd;
   display: inline-block;
   width: 150px;
   height: 150px;
 }
 
 .small-cube {
-  border: 2px solid rgba(0,0,0,0.2);
   display: inline-block;
-  width: 34px;
-  height: 34px;
+  box-sizing: border-box;
+  height: 32px;
+  width: 32px;
+}
+
+.palette {
+  font-size: 0px;
+  border: 2px solid #bdbdbd;
+}
+
+#ctrlPanel {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  border-top: 2px solid #bdbdbd;
+  border-bottom: 2px solid #bdbdbd;
+  background-color: white;
+  position: absolute;
+  margin: auto;
+  /* width: 100%; */
+  /* height: 50%; */
+  left: 0;
+  right: 0;
+  z-index: 9000;
+  padding: 10px;
+}
+
+#asd {
+  text-align: center;
 }
